tests/errors/lifetime/loan/out_loan_blocks_direct_write.sim

        extern fn take_out(r: &out i64);
        fn f() {
          x: i64;
          r: &out i64;
          entry:
            r = &out x;
            x = 42;
            call take_out(move r);
            return
        }
        